We add media queries to Project section to avoid overflow in x axis

--- a/src/features/Projects/Projects.css
+++ b/src/features/Projects/Projects.css
@@ -28,7 +28,7 @@
     display: grid;
     gap: 2rem;
     margin-top: 3rem;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 }
 
 .projects-card {
@@ -80,4 +80,10 @@
     color: var(--text-color);
     margin-bottom: 1.25rem;
     line-height: 1.6;
+}
+
+@media (max-width: 500px) {
+    .projects-cards {
+        grid-template-columns: repeat(auto-fit, 1fr);
+    }
 }
